press the button and see count go up

--- a/HTMLwithJAVASCRIPTinOtherFile.html
+++ b/HTMLwithJAVASCRIPTinOtherFile.html
@@ -6,7 +6,7 @@
     <title>title</title>
   </head>
   <body>
-    <p id="confirm">Confirm purchase?</p>
+    <p id="num">0</p>
     <button id="count">Count</button>
 
     <script src="test.js"> </script>
