--- a/HTMLwithJAVASCRIPTinOtherFile.html
+++ b/HTMLwithJAVASCRIPTinOtherFile.html
@@ -8,6 +8,7 @@
   <body>
     <p id="num">0</p>
     <button id="count">Count</button>
+    <h1 id="name"></h1>
 
     <script src="test.js"> </script>
   </body>
