--- a/library.html
+++ b/library.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
       <br>
@@ -11,5 +10,6 @@
     <div id="add"></div>
   </body>
   <button id="click">Add book</button>
-  <script src="test.js"> </script>
+  <script src="library.js"> </script>
+  <link rel='stylesheet' type='text/css' href='library.css'>
 </html>
