random values can be added to the spaces

--- a/Suduko/index.html
+++ b/Suduko/index.html
@@ -29,119 +29,59 @@
     <table class="grid" border="1" style="border-collapse: collapse">
       <div class="threeRows">
         <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell1"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell2"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell3"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell4"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell5"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell6"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-        </tr>
-        <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell7"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell8"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell9"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
         </tr>
         <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell10"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell11"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell12"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell13"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell14"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell15"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-        </tr>
-        <tr class="horizontalSpace"></tr>
-      </div>
-      <div class="threeRows">
-        <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell16"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell17"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell18"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
         </tr>
         <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell19"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell20"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell21"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell22"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell23"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell24"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-        </tr>
-        <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell25"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell26"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell27"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
         </tr>
@@ -149,59 +89,119 @@
       </div>
       <div class="threeRows">
         <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell28"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell29"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell30"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell31"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell32"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell33"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-        </tr>
-        <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-
-          <td class="verticalSpace"></td>
-
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell34"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell35"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell36"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
         </tr>
         <tr>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell37"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell38"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell39"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell40"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell41"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell42"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
 
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
-          <td class="cell"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell43"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell44"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell45"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+        </tr>
+        <tr>
+          <td class="cell" id="cell46"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell47"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell48"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell49"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell50"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell51"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell52"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell53"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell54"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+        </tr>
+        <tr class="horizontalSpace"></tr>
+      </div>
+      <div class="threeRows">
+        <tr>
+          <td class="cell" id="cell55"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell56"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell57"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell58"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell59"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell60"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell61"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell62"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell63"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+        </tr>
+        <tr>
+          <td class="cell" id="cell64"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell65"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell66"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell67"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell68"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell69"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell70"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell71"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell72"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+        </tr>
+        <tr>
+          <td class="cell" id="cell73"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell74"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell75"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell76"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell77"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell78"><input type="text" maxlength="1" /></td>
+
+          <td class="verticalSpace"></td>
+
+          <td class="cell" id="cell79"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell80"><input type="text" maxlength="1" /></td>
+          <td class="cell" id="cell81"><input type="text" maxlength="1" /></td>
 
           <td class="verticalSpace"></td>
         </tr>
@@ -209,4 +209,13 @@
       </div>
     </table>
   </body>
+  <script>
+    const ALL_CELLS_VALUE = [];
+    for (let i = 1; i <= 81; i++) {
+      ALL_CELLS_VALUE[i - 1] = Math.floor(Math.random() * 10);
+      document.getElementById("cell" + i).lastChild.value =
+        ALL_CELLS_VALUE[i - 1];
+    }
+    console.log(ALL_CELLS_VALUE);
+  </script>
 </html>
